update study data with snippets from google search

--- a/oasis.ipynb
+++ b/oasis.ipynb
@@ -128,13 +128,13 @@
     "        }\n",
     "        number_of_unknown_response_rates = 0\n",
     "        for intervention in data[\"Interventions\"]:\n",
+    "            intervention_has_response_rate = False\n",
     "            drug = intervention[\"InterventionName\"]\n",
     "            condition = data[\"Condition\"]\n",
     "            response_rate_query = 'response rate {drug} in \"{condition}\"'.format(drug=drug, condition=condition[0])\n",
     "            survival_rate_query = 'survival months {drug} in \"{condition}\"'.format(drug=drug, condition=condition[0])\n",
     "            response_rate_search_result = googlesearch(response_rate_query)\n",
     "            survival_rate_search_result = googlesearch(survival_rate_query)\n",
-    "            response_rate = get_response_rate(response_rate_search_result.get(\"items\", [{}])[0].get(\"snippet\", \"\"))\n",
     "\n",
     "            for item in  response_rate_search_result.get(\"items\", [{}]):\n",
     "                response_rate = get_response_rate(item.get(\"snippet\", \"\"))\n",
@@ -142,7 +142,9 @@
     "                if response_rate == 'unknown':\n",
     "                    continue\n",
     "                else:\n",
+    "                    intervention_has_response_rate = True\n",
     "                    intervention[\"response_rate_source\"] = item.get(\"link\", \"\")\n",
+    "                    intervention[\"response_rate_snippet\"] = item.get(\"snippet\", \"\")\n",
     "                    break\n",
     "\n",
     "            for item in  survival_rate_search_result.get(\"items\", [{}]):\n",
@@ -152,11 +154,10 @@
     "                    continue\n",
     "                else:\n",
     "                    intervention[\"survival_rate_source\"] = item.get(\"link\", \"\")\n",
+    "                    intervention[\"survival_rate_snippet\"] = item.get(\"snippet\", \"\")\n",
     "                    break\n",
     "\n",
-    "            intervention[\"snippet\"] = response_rate_search_result.get(\"items\", [{}])[0].get(\"snippet\", \"\")\n",
-    "\n",
-    "            if response_rate!=\"unknown\":\n",
+    "            if intervention_has_response_rate:\n",
     "                drug_interventions_with_response_rate.append(intervention)\n",
     "            else:\n",
     "                number_of_unknown_response_rates+=1\n",
@@ -233,7 +234,8 @@
     "daly_data[\"max_response\"] = {}\n",
     "for item in daly_data[\"Cause_Name_Label\"]:\n",
     "# for item in range(4):\n",
-    "    print('Getting data for '+ daly_data[\"Cause_Name_Label\"][item] + \" cancer\")\n",
+    "    \n",
+    "    print('{}/{} - Getting data for '.format(int(c_index), len(daly_data[\"Cause_Name_Label\"]))+ daly_data[\"Cause_Name_Label\"][item] + \" cancer\")\n",
     "\n",
     "    c_index = item # cancer index\n",
     "    clinical_trials_api[\"full_studies\"][\"params\"][\"expr\"] = daly_data[\"Cause_Name_Label\"][item] + \" cancer\"\n",
