update study data with snippets from google search

--- a/oasis.ipynb
+++ b/oasis.ipynb
@@ -230,12 +230,13 @@
     "daly_data[\"max_response\"] = {}\n",
     "# print(json.dumps(daly_data, indent=4, sort_keys=False))\n",
     "c_index = 0\n",
+    "count = 0\n",
     "daly_data[\"max_survival\"] = {}\n",
     "daly_data[\"max_response\"] = {}\n",
     "for item in daly_data[\"Cause_Name_Label\"]:\n",
     "# for item in range(4):\n",
-    "\n",
-    "    print('{}/{} - Getting data for '.format(int(c_index), len(daly_data[\"Cause_Name_Label\"]))+ daly_data[\"Cause_Name_Label\"][item] + \" cancer\")\n",
+    "    count += 1\n",
+    "    print('{}/{} - Getting data for '.format(count, len(daly_data[\"Cause_Name_Label\"]))+ daly_data[\"Cause_Name_Label\"][item] + \" cancer\")\n",
     "\n",
     "    c_index = item # cancer index\n",
     "    clinical_trials_api[\"full_studies\"][\"params\"][\"expr\"] = daly_data[\"Cause_Name_Label\"][item] + \" cancer\"\n",
