update study data with snippets from google search

--- a/oasis.ipynb
+++ b/oasis.ipynb
@@ -262,7 +262,7 @@
     "                    mx_response = float(intervention[\"response_rate\"].strip(\"%\"))\n",
     "                daly_data = update_dict_with_response_survival_data(daly_data, c_index, mx_survival, mx_response)\n",
     "            # studies.append(result)\n",
-    "            # print(json.dumps(result, indent=4, sort_keys=False))\n",
+    "            print(json.dumps(result, indent=4, sort_keys=False))\n",
     "\n",
     "\n",
     "df = pd.DataFrame.from_dict(daly_data)\n",
