update study data with snippets from google search

--- a/oasis.ipynb
+++ b/oasis.ipynb
@@ -263,6 +263,10 @@
     "                daly_data = update_dict_with_response_survival_data(daly_data, c_index, mx_survival, mx_response)\n",
     "            # studies.append(result)\n",
     "            print(json.dumps(result, indent=4, sort_keys=False))\n",
+    "    \n",
+    "    print()\n",
+    "    print()\n",
+    "    print()\n",
     "\n",
     "\n",
     "df = pd.DataFrame.from_dict(daly_data)\n",
