--- a/oasis.ipynb
+++ b/oasis.ipynb
@@ -263,7 +263,7 @@
     "                daly_data = update_dict_with_response_survival_data(daly_data, c_index, mx_survival, mx_response)\n",
     "            # studies.append(result)\n",
     "            print(json.dumps(result, indent=4, sort_keys=False))\n",
-    "    \n",
+    "\n",
     "    print()\n",
     "    print()\n",
     "    print()\n",
@@ -271,6 +271,7 @@
     "\n",
     "df = pd.DataFrame.from_dict(daly_data)\n",
     "df.to_csv(\"output.csv\")\n",
+    "print(\"Done getting data, output has been saved to output.csv\")\n",
     "# print(json.dumps(daly_data, indent=4, sort_keys=False))\n",
     "\n"
    ]
