update code to find interventional studies

--- a/oasis.ipynb
+++ b/oasis.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "GOOGLE_CSE_API_KEY = input(\"Enter GOOGLE CSE API KEY: \")"
+    "# GOOGLE_CSE_API_KEY = input(\"Enter GOOGLE CSE API KEY: \")"
    ]
   },
   {
